--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@
 </head>
   <body>
     <div id="root"></div>
+    <script 
+      src="https://widgets.leadconnectorhq.com/loader.js"  
+      data-resources-url="https://widgets.leadconnectorhq.com/chat-widget/loader.js" 
+      data-widget-id="69682c3f7f42eb58854a7021">
+    </script>
   <script type="module" src="/index.tsx"></script>
 </body>
 </html>
